--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    overflow-y: hidden;
+    overflow-x: hidden;
     cursor: url(img/cursor.png), auto;
     background-color: #000;
 }
@@ -14,6 +14,16 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 200px;
+    width: 100%;
+}
+
+@media (max-width: 1000px) {
+  main {
+    display: flex;
+  }
+    body {
+        overflow-x: scroll;
+    }
 }
 
 #sectie1 {
@@ -23,6 +33,7 @@ main {
     background-color: #f5e8db;
     margin-right: 20px;
     overflow: hidden;
+    z-index: 10;
 }
 
 #sectie1 h1 {
@@ -35,7 +46,7 @@ main {
 #Layer_1 {
     width: 700px;
     position: relative;
-    margin-top: -200px;
+    margin-top: -295px;
     margin-left: -20px;
 }
 
@@ -56,7 +67,7 @@ main {
 #Layer_3 {
     width: 900px;
     position: absolute;
-    bottom: 120px;
+    bottom: 95px;
     left: 50px;
     pointer-events: none;
     z-index: 4;
@@ -75,12 +86,13 @@ main {
 }
 
 #sectie1 p {
-    font-size: 4em;
+    font-size: 3em;
     position: absolute;
-    margin-left: 260px;
+    margin-left: 170px;
     margin-top: 30px;
     line-height: 1em;
     text-align: right;
+    font-family: 'Oswald', sans-serif;
 }
 
 #sectie1 div{
@@ -92,22 +104,22 @@ main {
     width: 1202px;
     height: 900px;
     border-radius: 0 30px 30px 0;
-/*    overflow: hidden;*/
+    overflow: hidden;
     position: relative;
 }
 
-@media (max-width: 2000px) {
+/*@media (max-width: 1500px) {
   #sectie2 {
-    width: 1000px;
+    width: 600px;
   }
-}
+}*/
 
 
 #texture {
     opacity: 10%;
-    mix-blend-mode: lighten;
+    mix-blend-mode: screen;
     position: absolute;
-    z-index: 3;
+    z-index: 5;
     pointer-events: none;
     height: 100%;
 }
