--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     cursor: url(img/cursor.png), auto;
     background-color: #000;
 }
@@ -27,12 +27,13 @@ main {
 }
 
 #sectie1 {
+    min-width: 700px;
     width: 700px;
     height: 900px;
     border-radius: 30px 0 0 30px;
     background-color: #f5e8db;
     margin-right: 20px;
-    overflow: hidden;
+    overflow-y: hidden;
     z-index: 10;
 }
 
@@ -104,20 +105,21 @@ main {
     width: 1202px;
     height: 900px;
     border-radius: 0 30px 30px 0;
-    overflow: hidden;
+/*    overflow: hidden;*/
     position: relative;
+    z-index: 1;
 }
 
-/*@media (max-width: 1500px) {
+/*@media (max-width: 1000px) {
   #sectie2 {
-    width: 600px;
+    overflow: scroll;
   }
 }*/
 
 
 #texture {
     opacity: 10%;
-    mix-blend-mode: screen;
+    mix-blend-mode: exclusion;
     position: absolute;
     z-index: 5;
     pointer-events: none;
