--- a/style.css
+++ b/style.css
@@ -16,33 +16,48 @@ main {
     margin-top: 150px;
 }
 
-@media (max-width: 1000px) {
-  main {
-    display: block;
-  }
-    body {
-        overflow-x: scroll;
-    }
-}
+
+
+
+/*Sectie 1*/
 
 #sectie1 {
     width: 500px;
     height: 650px;
-    border-radius: 20px 0 0 20px;
+    border-radius: 30px 0 0 30px;
     background-color: #f5e8db;
     margin-right: 10px;
     overflow-y: hidden;
     z-index: 10;
 }
 
-#sectie1 div{
+#sectie1 div {
     margin-top: 100px;
     margin-left: 20px;
 }
 
+#sectie1 #texture1{
+    opacity: 30%;
+    mix-blend-mode: color-burn;
+    position: absolute;
+    pointer-events: none;
+    z-index: 5;
+    margin-top: 0px;
+    margin-left: 0px;
+    width: inherit;
+    overflow: hidden;
+    height: 650px;
+}
+
+#sectie1 img {
+    width: inherit;
+    height: inherit;
+    overflow: hidden;
+}
 
 
 /*Buro 1*/
+
 #buro_1 {
     width: 500px;
     position: relative;
@@ -50,22 +65,32 @@ main {
     margin-left: -20px;
 }
 
-#buro_1 *{
-    fill: #000 !important;
+#buro_1 * {
+    fill: #1c1c1c;
+}
+
+.rood * {
+    fill: #ff1f1f !important;
+}
+
+.zwart * {
+    fill: #1c1c1c !important;
 }
 
 /*Buro 2*/
+
 #buro_2 {
     width: 500px;
     position: relative;
     margin-left: -20px;
 }
 
-#buro_2 *{
-    fill: #ff0037 !important;
+#buro_2 * {
+    fill: #ff1f1f;
 }
 
 /*Norm*/
+
 #norm {
     width: 650px;
     position: absolute;
@@ -75,12 +100,13 @@ main {
     z-index: 4;
 }
 
-#norm *{
-    fill: #ff0037 !important;
+#norm * {
+    fill: #ff1f1f !important;
 }
 
 
 /*Internationale*/
+
 #sectie1 p {
     font-size: 2em;
     position: absolute;
@@ -89,79 +115,169 @@ main {
     line-height: 1em;
     text-align: right;
     font-family: 'Oswald', sans-serif;
+    color: #ff1f1f;
 }
 
+
+/*Sectie 2*/
 
 #sectie2 {
-    width: 900px;
+    width: 870px;
     height: 650px;
     border-radius: 0 30px 30px 0;
-/*    overflow: hidden;*/
     position: relative;
     z-index: 1;
+    display: flex;
+    overflow: hidden;
 }
 
-/*@media (max-width: 1000px) {
-  #sectie2 {
-    overflow: scroll;
-  }
-}*/
-
-
-#texture {
-    opacity: 10%;
-    mix-blend-mode: exclusion;
+#sectie2 #texture2 {
+    opacity: 30%;
+    mix-blend-mode: color-burn;
     position: absolute;
-    z-index: 5;
     pointer-events: none;
-    height: 100%;
+    z-index: 5;
+    width: 870px;
+    height: 650px;
+    overflow: hidden;
 }
 
-img {
-    width: 100%;
+#sectie2 #texture2 img {
+    width: 960px
 }
 
-p {
-    font-size: 0.6em;
-    color: #ff0037;
+#sectie2 p {
+    font-size: 0.5em;
+    color: #ff1f1f;
     font-family: 'Teko', sans-serif;
     margin: 0;
 }
 
-.grid-container {
+.grid-container-1 {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    width: 700px;
+    grid-template-columns: auto auto;
+    width: 430px;
+    margin-right: 10px;
 }
 
+.grid-container-2 {
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 430px;
+}
+
+
+/*Blokjes*/
 .blokje {
     margin-bottom: 10px;
     margin-right: 10px;
-    border: 1.1px solid #333333;
-    border-radius: 50px;
+    border: 1.1px solid #5e5e5e;
+    border-radius: 30px;
     height: 210px;
     width: 210px;
     overflow: hidden;
-    background-color: #000;
-}
-
-.grid-container .zwart div {
-    background-color: #f5e8db;
-    transform: translateY(0px);
+    opacity: 1;
 }
 
 .blokje div {
-    background-color: #000;
     width: 100%;
     height: 100%;
-    transform: translateY(300px);
     transition: 0.5s;
     color: #FFF;
+    margin-top: 31px !important;
 }
 
-.grid-container .blokje-tekst div {
+.blokje-tekst div {
     background-color: #f5e8db;
     font-size: 50px;
     line-height: 1.0;
-    padding: 40px;
+    padding: 20px;
+    margin-top: 31px !important;
+}
+
+.blokje div img {
+    width: 207px;
+    mix-blend-mode: color-burn;
+}
+
+
+
+/*Dit word toegevoegd*/
+.animatie div {
+    background-color: #f5e8db;
+    transform: translateY(-243px);
+}
+
+
+/*Up icons*/
+.up-icon {
+    width: 20px;
+    position: inherit;
+    pointer-events: none;
+    opacity: 0;
+    display: block;
+    left: 7em;
+    margin: 200px auto 0 auto;
+}
+.up-icon-show {
+    opacity: 1 !important;
+}
+
+
+/*Mobile*/
+
+@media (max-width: 1400px) {
+    main {
+        display: block;
+    }
+    body {
+        display: flex;
+        justify-content: center;
+    }
+    #sectie1 {
+        margin-top: -100px;
+    }
+    #sectie2 {
+        display: block !important;
+        overflow: hidden !important;
+        margin-top: 50px;
+        width: 500px;
+        height: 1600px;
+    }
+    grid-container-1 {
+        overflow: none;
+    }
+    grid-container-2 {
+        overflow: none;
+    }
+    #norm {
+        width: 400px;
+        top: 70px;
+    }
+    .blokje {
+        width: 245px;
+        height: 245px;
+    }
+    #sectie2 #texture2 {
+        height: 1520px;
+        width: 100%;
+        overflow: hidden;
+    }
+    #sectie2 #texture2 img{
+        width: 500px;
+        height: 1520px;
+    }
+    .blokje div img {
+    width: 260px;
+    }
+    .up-icon {
+        opacity: 1;
+    }
+    .blokje div {
+        margin-top: -213px;
+        pointer-events: none;
+    }
+    p {
+        font-size: 0.6em;
+    }
 }
